--- a/.gitignore
+++ b/.gitignore
@@ -6,16 +6,17 @@ dist/
 # dependencies
 node_modules/
 
+# migrations
+migrations/
+
+# database
+dev.db
+
 # logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
-
-# environment variables
-.env
-.env.production
 
 # macOS-specific files
 .DS_Store
