--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.14",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/node": "^8.2.5",
+    "@prisma/client": "^5.12.0",
+    "astro": "^4.5.14",
     "typescript": "^5.4.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.3",
+    "prisma": "^5.12.0"
   }
 }
